sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:19: error: not found: value i
            deplacerJoueur(i, nCouleur, 1);
                           ^